# stm32wb55_embassy

./: Cargo.toml  embed.toml  memory.x
.cargo/: config.toml
.zed/: settings.json
src/: led.rs  main.rs  moisture.rs
