[package]
authors = ["Diego Barranco <diego@barranco.io>"]
name = "stm32wb55_test"
edition = "2024"
version = "0.1.0"


[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32wb55rg",
    "time-driver-any",
    "time",
    "exti",
    # "low-power", Feature not working on embassy-stm32 0.2.0 but fix on progress
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "udp",
    "proto-ipv6",
    "medium-ieee802154",
], optional = true }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"
embassy-futures = { version = "0.1.1", features = ["defmt"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 1           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z'          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
