[package]
authors = ["Diego Barranco <diego@barranco.io>"]
name = "stm32wb55_test"
edition = "2024"
version = "0.1.0"


[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy/", version = "^0.2.0", features = [
    "stm32wb55rg",
    "defmt",
    "exti",
    "chrono",
    "time-driver-any",
    "time",
    "unstable-pac",
    "low-power-debug-with-sleep",
    "low-power",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", version = "0.7.0", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "^0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"
embassy-futures = { git = "https://github.com/embassy-rs/embassy", version = "0.1.1", features = [
    "defmt",
] }
embedded-hal-async = "1.0.0"
